--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,11 +9,17 @@ spring:
     activate:
       on-profile: local
   kafka:
+    template:
+      default-topic: library-events
     consumer:
       bootstrap-servers: localhost:9092
       key-deserializer: org.apache.kafka.common.serialization.IntegerDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       group-id: library-events-listener-group
+    producer:
+      bootstrap-servers: localhost:9092
+      key-deserializer: org.apache.kafka.common.serialization.IntegerSerializer
+      value-deserializer: org.apache.kafka.common.serialization.StringSerializer
 
 ---
 spring:
